# trainee_speak

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-test.yaml
config/: speak_list.param.yaml  voice_config.param.yaml
include/raspicat_speak2/: raspicat_speak2.hpp  speak_info.hpp
include/trainee_speak/: trainee_speak.hpp  voice_config.hpp
launch/: raspicat_speak2.launch.py  trainee_speak.launch.py
scritps/: install.sh  purge_pkg.sh
src/: raspicat_speak2_core.cpp  raspicat_speak2_node.cpp  trainee_speak_core.cpp  trainee_speak_node.cpp
